Fix flaky behavior (and potential crash) in the patch service.

Bug: 785936
Change-Id: I08bf3e8a66291df8fffa256bad765c6e0743d29b
Reviewed-on: https://chromium-review.googlesource.com/775555
Reviewed-by: Sorin Jianu <sorin@chromium.org>
Commit-Queue: Joshua Pawlicki <waffles@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517198}
Former-commit-id: 9fb91d70045741cdcbfad8df694abb5845000fbb