components/patch_service/public/cpp/patch.cc
@@ -49,7 +49,9 @@ class PatchParams : public base::RefCounted<PatchParams> {
 };
 
 void PatchDone(scoped_refptr<PatchParams> params, int result) {
-  params->TakeCallback().Run(result);
+  PatchCallback cb = params->TakeCallback();
+  if (!cb.is_null())
+    std::move(cb).Run(result);
 }
 
 }  // namespace
